@@ -11,7 +11,6 @@ examples/london.css
 examples/vegan-oxford.css
 lib/OpenGuides/Build.pm
 lib/OpenGuides/CGI.pm
-lib/OpenGuides/Diff.pm
 lib/OpenGuides/RDF.pm
 lib/OpenGuides/SuperSearch.pm
 lib/OpenGuides/Template.pm
